--- a/style.css
+++ b/style.css
@@ -39,6 +39,6 @@ div a{
 #nao{
     background-color: rgb(255, 88, 88);
 }
-#nao:hover{
-    background-color: rgb(192, 0, 0);
+#img{
+    text-align: center;
 }
